# format

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
include/: format.h
test/unittest/: CMakeLists.txt  test_format.cpp
